--- a/konac/templates/konac/music2.html
+++ b/konac/templates/konac/music2.html
@@ -12,7 +12,7 @@ Konac | Official Site
         <div class="col-sm-4">
             <audio class="flutterAud" src="{% static 'konac/audio/flutter.mp3' %}" type="audio/mpeg"></audio>
             <img value="flutter" id="flutter" class="flutter" src="{% static 'konac/images/flutter.jpg' %}" width="300px" height="auto" alt="Flutter"/>
-            <a href="{% url 'comments' %}"><p class="music-caption">FLUTTER</p></a>
+            <a id="flutter-comments" href="{% url 'flutter' %}"><p class="music-caption">FLUTTER</p></a>
         </div>
         <div class="col-sm-4">
             <audio class="wontletgoAud" src="{% static 'konac/audio/wontletgo.mp3' %}" type="audio/mpeg"></audio>
