--- a/konac/templates/konac/layout.html
+++ b/konac/templates/konac/layout.html
@@ -75,9 +75,6 @@
             </div>
           </div>
 
-
-          <!----------------------------------------------------------->
-
           <!-- Trigger the modal with a button -->
           <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#regModal">REGISTER</button>
 
@@ -111,9 +108,6 @@
         </nav>
 
       {% block body %}
-
-
-
       {% endblock %}
 
       <nav id="lowNav" class="navbar navbar-light bg-light">
@@ -125,6 +119,9 @@
                 Terms & Conditions
               </div>
           </a>
+              <div id="contact">
+                itskonac@gmail.com
+              </div>
         </div>
 
       </nav>
