--- a/konac/templates/konac/flutter.html
+++ b/konac/templates/konac/flutter.html
@@ -8,27 +8,29 @@ Konac | Official Site
 
 {% block body %}
 
-    <img value="flutter" class="flutter" id="flutterBig" src="{% static 'konac/images/flutter.jpg' %}" width="auto" height="auto" alt="Flutter"/>
+        <img value="away" class="away" id="flutterBig" src="{% static 'konac/images/flutter.jpg' %}" width="auto" height="auto" alt="Flutter"/>
 
-        <div class="pre-scrollable">
-            {% for comment in comments %}
-            <ul> {{ comment }}</ul>
-            {% endfor %}
-        </div>
+            <div class="pre-scrollable">
+                {% for key, value in comments.items %}
+                    {% for comment in value %}
+                        <ul>{{ comment }}</ul>
+                    {% endfor %}
+                {% endfor %}
+            </div>
 
-    <div class="divBox">
-        <div class="container center_div">
-            <form action="{% url 'flutter' %}" method="post">
-            {% csrf_token %}
-                <div class="form-group">
-                    <label class="commentHeader" for="comment">Comment:</label>
-                    <input type="text" class="form-control" name="comment">
-                </div>
-                <div class="col-sm-10">
-                    <input type="submit" value="Post" class="btn btn-primary">
-                </div>
-            </form>
+        <div class="commentDiv">
+            <div class="container center_div">
+                <form action="{% url 'flutter' %}" method="post">
+                {% csrf_token %}
+                    <div class="form-group">
+                        <label class="commentHeader" for="comment">Comment:</label>
+                        <input type="text" class="form-control" name="comment">
+                    </div>
+                    <div class="col-sm-10">
+                        <input type="submit" value="Post" class="btn btn-primary">
+                    </div>
+                </form>
+            </div>
         </div>
-    </div>
 
 {% endblock %}
