--- a/konac/templates/konac/layout.html
+++ b/konac/templates/konac/layout.html
@@ -24,7 +24,7 @@
   </head>
   <body>
 
-        <nav class="navbar navbar-light bg-light">
+        <nav id="navBar" class="navbar navbar-light bg-light">
 
           <a class="navbar-brand" id="konac" href="{% url 'index' %}">
               <h1 class="konac">
@@ -76,7 +76,7 @@
           </div>
 
           <!-- Trigger the modal with a button -->
-          <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#regModal">REGISTER</button>
+          <button type="button" id="regBtn" class="btn btn-info btn-lg" data-toggle="modal" data-target="#regModal">REGISTER</button>
 
           <!-- Modal -->
           <div id="regModal" class="modal fade" role="dialog">
